--- a/add-webP.workflow/Contents/Info.plist
+++ b/add-webP.workflow/Contents/Info.plist
@@ -12,7 +12,7 @@
 			<key>NSMenuItem</key>
 			<dict>
 				<key>default</key>
-				<string>WebP生成</string>
+				<string>add-webP</string>
 			</dict>
 			<key>NSMessage</key>
 			<string>runWorkflowAsService</string>
