--- a/mp4圧縮.workflow/Contents/Info.plist
+++ b/mp4圧縮.workflow/Contents/Info.plist
@@ -12,13 +12,18 @@
 			<key>NSMenuItem</key>
 			<dict>
 				<key>default</key>
-				<string>webmをmp4に変換</string>
+				<string>mp4圧縮</string>
 			</dict>
 			<key>NSMessage</key>
 			<string>runWorkflowAsService</string>
+			<key>NSRequiredContext</key>
+			<dict>
+				<key>NSApplicationIdentifier</key>
+				<string>com.apple.finder</string>
+			</dict>
 			<key>NSSendFileTypes</key>
 			<array>
-				<string>public.item</string>
+				<string>public.movie</string>
 			</array>
 		</dict>
 	</array>
