--- a/webM変換.workflow/Contents/Info.plist
+++ b/webM変換.workflow/Contents/Info.plist
@@ -12,7 +12,7 @@
 			<key>NSMenuItem</key>
 			<dict>
 				<key>default</key>
-				<string>webM生成</string>
+				<string>webM変換</string>
 			</dict>
 			<key>NSMessage</key>
 			<string>runWorkflowAsService</string>
